--- a/ObjectOrientedPrograms/ObjectOrientedPrograms/ObjectOrientedPrograms.csproj
+++ b/ObjectOrientedPrograms/ObjectOrientedPrograms/ObjectOrientedPrograms.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NEST" Version="7.17.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
